# OpenSymphony

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WORKFLOW.md  jest.config.js  jest.setup.cjs  jest.setup.js  package.json  playwright.config.ts  pr-body.md  tsconfig.json  tsconfig.projects.json
.agents/skills/: custom-codereview-guide.md
.agents/skills/convert-tasks-to-linear/: SKILL.md
.agents/skills/create-implementation-plan/: SKILL.md
.agents/skills/linear/: SKILL.md  dashboard_update.md
.agents/skills/opensymphony-memory/: SKILL.md
.github/workflows/: ai-pr-review.yml  ci.yml  notify-web-changelog.yml
.opensymphony/memory/: memory.yaml
apps/desktop/: package.json
apps/desktop/src/: index.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: settings.json
apps/desktop/src-tauri/src/: actions.rs  commands.rs  daemon.rs  keychain.rs  lib.rs  main.rs  settings.rs  types.rs
apps/desktop/src-tauri/tests/: process_ownership.rs
apps/web/: .env.example  index.html  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/web/__tests__/: component-render.test.ts  component-render.test.tsx  run-fixtures.test.ts  terminal-viewer.test.ts
apps/web/e2e/: ui-evidence.spec.ts
apps/web/src/: App.tsx  config.ts  index.ts  main.ts  terminal-viewer.ts
crates/opensymphony-cli/: Cargo.toml
crates/opensymphony-cli/assets/openhands-server/: README.md
crates/opensymphony-cli/src/: debug_session.rs  init_repo.rs  install_tooling.rs  lib.rs  memory.rs  project_set_migration.rs  project_set_writer.rs  repo_detection.rs  update_repo.rs  util.rs  workspace_clone.rs
crates/opensymphony-cli/src/orchestrator_run/: backends.rs  config.rs  mod.rs  snapshot.rs
crates/opensymphony-cli/tests/: debug.rs  doctor.rs  help.rs  init.rs  install.rs  memory.rs  run.rs  tui.rs  update.rs
crates/opensymphony-control/: Cargo.toml
crates/opensymphony-control/src/: lib.rs
crates/opensymphony-control/tests/: control_plane.rs
crates/opensymphony-domain/: Cargo.toml
crates/opensymphony-domain/src/: control_plane.rs  issue.rs  lib.rs  repo.rs  runtime.rs  state_machine.rs  terminal_log.rs  timeline.rs  tracker.rs
crates/opensymphony-domain/tests/: snapshot_serialization.rs
crates/opensymphony-gateway-schema/: Cargo.toml
crates/opensymphony-gateway-schema/src/: action.rs  approval.rs  envelope.rs  event_journal.rs  lib.rs  planning.rs  run.rs  task_graph.rs  terminal.rs  transport.rs  validation.rs  version.rs
crates/opensymphony-gateway-schema/tests/: gateway_schema.rs  stream_benchmarks.rs
crates/opensymphony-gateway/src/: action_handler.rs  lib.rs  planning_publish.rs  task_graph_mutations.rs
crates/opensymphony-gateway/tests/: gateway.rs
crates/opensymphony-linear/: Cargo.toml
crates/opensymphony-linear/src/: client.rs  error.rs  graphql.rs  lib.rs  normalize.rs  schema_drift.rs  task_graph_cache.rs
crates/opensymphony-linear/tests/: linear_client.rs
crates/opensymphony-memory/src/: archive.rs  capture.rs  capture_render.rs  config.rs  docs_sync.rs  index.rs  lib.rs  query.rs  util.rs
crates/opensymphony-openhands/: Cargo.toml
crates/opensymphony-openhands/src/: client.rs  events.rs  lib.rs  models.rs  normalization.rs  runtime_mirror.rs  session.rs  supervisor.rs
crates/opensymphony-openhands/tests/: client_resilience.rs  event_normalization.rs  fake_server_contract.rs  issue_session_runner.rs  live_local_suite.rs  live_pinned_server.rs  runtime_mirror.rs  supervisor.rs
crates/opensymphony-orchestrator/: Cargo.toml
crates/opensymphony-orchestrator/src/: lib.rs  repo_resolver.rs  scheduler.rs  selection.rs
crates/opensymphony-orchestrator/tests/: scheduler.rs
crates/opensymphony-planning/: Cargo.toml
crates/opensymphony-planning/src/: codebase.rs  lib.rs  (+2 more)
crates/opensymphony-testkit/: Cargo.toml
crates/opensymphony-testkit/src/: lib.rs
crates/opensymphony-tui/: Cargo.toml
crates/opensymphony-tui/src/: lib.rs
crates/opensymphony-tui/tests/: reducer.rs
crates/opensymphony-workflow/: Cargo.toml
crates/opensymphony-workflow/src/: error.rs  lib.rs  loader.rs  model.rs  resolve.rs
crates/opensymphony-workspace/: Cargo.toml
crates/opensymphony-workspace/src/: lib.rs  manager.rs  models.rs
crates/opensymphony-workspace/tests/: workspace_manager.rs
docs/: DEPLOYMENT.md  DEVELOPMENT.md  ai-pr-review-human-setup.md  ai-pr-review-system-spec.md  architecture.md  build.md  cli.md  configuration.md  deployment-modes.md  developer-experience.md  devex.md  domain-vocabulary-and-id-mapping.md  elixir-hierarchy-changes.md  gateway-api-inventory.md  gateway-dto-boundary-checklist.md  host-client-architecture.md  host-client-implementation_plan.md  hosted-client-PRD.md  implementation-plan.md  installer-and-distribution.md  linear-and-tools.md  memory-capture-and-doc-sync.md  memory.md  migration-1.0.0.md  okf-memory-spec.md  openhands-agent-server.md  operations.md  prerequisites.md  repository-layout.md  sources.md  symphony-spec-alignment.md  tauri-security-checklist.md  testing-and-operations.md  ui-frankentui.md  web-deployment.md  websocket-runtime.md  workspace-and-lifecycle.md
docs/tasks/: linear-publish.yaml  milestones.md  multi-repo-memory-server-with-code-intelligence.md  osym-300-tracker-workspaces-and-orchestration.md  osym-303-linear-mcp-write-surface.md  osym-503-cli-packaging-doctor-and-local-operations-docs.md  osym-600-multi-repo-repo-identity-and-dispatch-audit.md  osym-718-desktop-alpha-recovery.md  osym-738-non-interactive-init-for-automation.md  osym-781-long-running-run-observability-fixtures-and-diagnostics.md  task-package.yaml
examples/: project-set.yaml
scripts/: multirepo_live_linear_e2e.sh  multirepo_planner_contract_check.sh  publish_crates.sh  reply_reviews.py  update_workpad.py
src/: lib.rs
tests/: action_handler.rs  coe_400_evidence.rs  planning_publish_routes.rs  task_graph_mutations_routes.rs  transport_equivalence.rs
tests/python/: test_convert_tasks_apply.py  test_convert_tasks_validate_repo.py  test_label_merge.py
tests/support/: mod.rs
(+53 files in other folders)
