[package]
name = "opensymphony-cli"
description = "CLI entrypoints for the OpenSymphony orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "agents", "orchestration", "linear", "openhands"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "opensymphony"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
opensymphony-control.workspace = true
opensymphony-domain.workspace = true
opensymphony-linear.workspace = true
opensymphony-openhands.workspace = true
opensymphony-orchestrator.workspace = true
opensymphony-tui.workspace = true
opensymphony-workflow.workspace = true
opensymphony-workspace.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
opensymphony-testkit.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
