[package]
name = "opensymphony-control"
description = "Read-only control plane snapshot and event streaming for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
opensymphony-domain.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
