[package]
name = "opensymphony-domain"
description = "Shared domain model and state machine for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
