[package]
name = "opensymphony-gateway-schema"
version = "1.7.3"
description = "Shared gateway DTOs, cursors, frames, and action receipts"
license = "MIT"
homepage = "https://opensymphony.dev"
repository = "https://github.com/kumanday/OpenSymphony"
authors = ["OpenSymphony Contributors"]
edition = "2024"
rust-version = "1.93"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "io-util"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

[workspace]
