[package]
name = "opensymphony-linear"
description = "Linear GraphQL integration for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[dependencies]
chrono.workspace = true
opensymphony-domain.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"
