[package]
name = "opensymphony-openhands"
description = "OpenHands agent-server integration for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
opensymphony-domain.workspace = true
opensymphony-workflow.workspace = true
opensymphony-workspace.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml = "0.8"
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
opensymphony-testkit.workspace = true
tempfile.workspace = true
tokio.workspace = true
