[package]
name = "opensymphony-orchestrator"
description = "Scheduler and orchestration core for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
opensymphony-domain.workspace = true
opensymphony-workflow.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
chrono = { workspace = true }
opensymphony-linear.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true }
