[package]
name = "opensymphony-tui"
description = "FrankenTUI-based terminal UI for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
ftui.workspace = true
opensymphony-control.workspace = true
opensymphony-domain.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-width.workspace = true
url.workspace = true
