[package]
name = "opensymphony-workflow"
description = "Workflow manifest parsing and template rendering for OpenSymphony"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
liquid = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
time = "=0.3.47"
thiserror = "2"
url.workspace = true
